--- a/kakuro.html
+++ b/kakuro.html
@@ -28,7 +28,7 @@
 						<div ng-if="!cell.value" class="cell-possible">
 							<div ng-repeat="(n, p) in cell.possible" ng-bind="p ? n : ''"></div>
 						</div>
-						<div ng-if="!!cell.value" class="cell" ng-class="{ 'impossible': !cell.possible[cell.value] }" ng-bind="cell.value"></div>
+						<div ng-if="!!cell.value" class="cell" ng-class="{ 'invalid': cell.errors['value-impossible'] }" ng-bind="cell.value"></div>
 					</div>
 				</td>
 			</tr>
