--- a/kakuro.html
+++ b/kakuro.html
@@ -16,16 +16,21 @@
 	<script src="kakuro.js"></script>
 </head>
 <body ng-app="kakuro" ng-controller="kakuro.body.controller as body" ng-keydown="body.handleKeys($event)">
-	<h1>Kakuro</h1>
+	<h1 id="title">Kakuro</h1>
+
+	<!-- TODO this needs a total refactor -->
+	<h1 ng-if="!!body.board.stats.noneCount" ng-bind="body.board.stats.noneCount"></h1>
 
 	<div id="board-wrapper">
 		<table id="board">
 			<tr data-ng-repeat="row in body.board">
 				<td data-ng-repeat="cell in row" ng-class="{ 'focus': (cell === body.focus.cell) }">
 					<div ng-if="cell.type === 'none'" class="none"></div>
-					<div ng-if="cell.type === 'empty'" class="empty">
-						<div class="right" ng-bind="cell.right"></div>
-						<div class="down" ng-bind="cell.down"></div>
+					<div ng-if="cell.type === 'empty'" class="empty" ng-class="{ 'hasNum': !!(cell.right || cell.down) }">
+						<div class="right" ng-bind="cell.right"
+							ng-class="{ 'invalid': cell.errors['right-no-space'] }"></div>
+						<div class="down" ng-bind="cell.down"
+							ng-class="{ 'invalid': cell.errors['down-no-space'] }"></div>
 					</div>
 					<div ng-if="cell.type === 'cell' && !cell.value" class="cell-possible">
 						<div ng-repeat="(n, p) in cell.possible" ng-bind="p ? n : ''"></div>
@@ -36,6 +41,15 @@
 				</td>
 			</tr>
 		</table>
+	</div>
+
+	<div id="keys-summary">
+		<dl>
+			<dt>&uarr;&rarr;&darr;&larr;</dt><dd>Move cursor.</dd>
+			<dt>e</dt><dd>Specify an empty cell, a cell that cannot have numbers. This will prompt for right/down sums.</dd>
+			<dt>c</dt><dd>Specify a cell as one that can have a value. This will clear the number already used.</dd>
+			<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
+		</dl>
 	</div>
 </body>
 </html>
