the first heuristic

--- a/kakuro.html
+++ b/kakuro.html
@@ -13,6 +13,7 @@
 		crossorigin="anonymous"></script>
 
 	<link href="kakuro.css" rel="stylesheet">
+	<script src="possible_values.js"></script>
 	<script src="kakuro.js"></script>
 </head>
 <body ng-app="kakuro" ng-controller="kakuro.body.controller as body" ng-keydown="body.handleKeys($event)">
