redo layout, review TODOs

--- a/kakuro.html
+++ b/kakuro.html
@@ -19,9 +19,6 @@
 <body ng-app="kakuro" ng-controller="kakuro.body.controller as body" ng-keydown="body.handleKeys($event)">
 	<h1 id="title">Kakuro</h1>
 
-	<!-- TODO this needs a total refactor -->
-	<h1 ng-if="!!body.board.stats.noneCount" ng-bind="body.board.stats.noneCount"></h1>
-
 	<div id="board-wrapper">
 		<table id="board">
 			<tr data-ng-repeat="row in body.board">
@@ -44,13 +41,34 @@
 		</table>
 	</div>
 
-	<div id="keys-summary">
-		<dl>
-			<dt>&uarr;&rarr;&darr;&larr;</dt><dd>Move cursor.</dd>
-			<dt>e</dt><dd>Specify an empty cell, a cell that cannot have numbers. This will prompt for right/down sums.</dd>
-			<dt>c</dt><dd>Specify a cell as one that can have a value. This will clear the number already used.</dd>
-			<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
-		</dl>
+	<div id="extra-info">
+		<div ng-if="!!body.board.stats.noneCount">
+			<h2>Still defining the board</h2>
+			<span class="badge badge-primary" ng-bind="body.board.stats.noneCount"></span>
+			remaining spaces to define.
+		</div>
+
+		<div>
+			<h2>Focus <small ng-bind="body.focus.cell.type"></small></h2>
+
+			<div ng-if="body.focus.cell.errors['value-impossible']"><span class="error-label">value-impossible</span> The specified value is not one of the possible values.</div>
+			<div ng-if="body.focus.cell.errors['value-duplicate']"><span class="error-label">value-duplicate</span> The specified value is used more than once in it's row/col.</div>
+			<div ng-if="body.focus.cell.errors['right-no-space']"><span class="error-label">right-no-space</span> There isn't enough room for a row.</div>
+			<div ng-if="body.focus.cell.errors['down-no-space']"><span class="error-label">down-no-space</span> There isn't enough room for a col.</div>
+			<div ng-if="body.focus.cell.errors['right-sum']"><span class="error-label">right-sum</span> The row is completed and the values don't match the advertised sum.</div>
+			<div ng-if="body.focus.cell.errors['down-sum']"><span class="error-label">down-sum</span> The col is completed and the values don't match the advertised sum.</div>
+		</div>
+
+		<div id="keys-summary">
+			<h2>Keys</h2>
+			<dl>
+				<dt>&uarr;&rarr;&darr;&larr;</dt><dd>Move cursor.</dd>
+				<dt>e</dt><dd>Specify an empty cell, a cell that cannot have numbers. This will prompt for right/down sums.</dd>
+				<dt>c</dt><dd>Specify a cell as one that can have a value. This will clear the number already used.</dd>
+				<dt>r</dt><dd>Reset the possible values and run the base heuristic again.</dd>
+				<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
+			</dl>
+		</div>
 	</div>
 </body>
 </html>
