update copy to clipboard

--- a/kakuro.html
+++ b/kakuro.html
@@ -52,6 +52,7 @@
 			</p>
 			<p>
 				<button type="button" class="btn-primary" ng-click="body.save()">Save</button>
+				<input id="copyText" ng-value="body.saveStr" />
 			</p>
 		</div>
 
