rename board.stats -> board.$stats, rename calcStats -> recomputeMetadata

--- a/kakuro.html
+++ b/kakuro.html
@@ -47,7 +47,7 @@
 		<div ng-if="body.showSetup">
 			<h2>Still defining the board</h2>
 			<p>
-				<span class="badge badge-primary" ng-bind="body.board.stats.noneCount"></span>
+				<span class="badge badge-primary" ng-bind="body.board.$stats.noneCount"></span>
 				remaining spaces to define.
 			</p>
 			<p>
