--- a/kakuro.html
+++ b/kakuro.html
@@ -105,6 +105,14 @@
 		<div ng-if="body.showDemo">
 			<h2>Demo Stuff</h2>
 
+			<form name="makeBoardForm">
+				<!-- TODO style input -->
+				<!-- TODO validate integers? -->
+				<label>w</label> <input type="number" name="width" min="3" max="15" ng-model="body.formData.width" />
+				<label>h</label> <input type="number" name="height" min="3" max="15" ng-model="body.formData.height" />
+				<button type="submit" class="btn-primary" ng-disabled="makeBoardForm.$invalid" ng-click="body.makeBoard()">Make Board</button>
+			</form>
+
 			<button type="button" class="btn-primary" ng-repeat="(name, def) in body.PREDEFINED_BOARDS"
 				ng-bind="name" ng-click="body.loadBoard(def)"></button>
 		</div>
