--- a/kakuro.html
+++ b/kakuro.html
@@ -106,10 +106,10 @@
 			<h2>Demo Stuff</h2>
 
 			<form name="makeBoardForm">
-				<!-- TODO style input -->
-				<!-- TODO validate integers? -->
-				<label>w</label> <input type="number" name="width" min="3" max="15" ng-model="body.formData.width" />
-				<label>h</label> <input type="number" name="height" min="3" max="15" ng-model="body.formData.height" />
+				<label>w</label> <input name="width" ng-model="body.formData.width"
+					type="number" min="3" max="15" required ng-pattern="/^[0-9]+$/" />
+				<label>h</label> <input name="height" ng-model="body.formData.height"
+					type="number" min="3" max="15" required ng-pattern="/^[0-9]+$/" />
 				<button type="submit" class="btn-primary" ng-disabled="makeBoardForm.$invalid" ng-click="body.makeBoard()">Make Board</button>
 			</form>
 
