--- a/kakuro.html
+++ b/kakuro.html
@@ -53,6 +53,7 @@
 			<p>
 				<button type="button" class="btn-primary" ng-click="body.save()">Save</button>
 				<input id="copyText" ng-value="body.saveStr" />
+				<span class="error-label ng-hide-animate" ng-show="body.saveFeedback">copied to clipboard</span>
 			</p>
 		</div>
 
