update keys on ui

--- a/lib/kakuro.html
+++ b/lib/kakuro.html
@@ -135,6 +135,7 @@
 				<dt>c</dt><dd>Specify a cell as one that can have a value. This will clear the number already used.</dd>
 				<dt>r</dt><dd>Reset the possible values and run the base heuristic again.</dd>
 				<dt>h</dt><dd>Run experimental heuristic. This won't be run in the normal loop.</dd>
+				<dt>n</dt><dd>Autofill cells that have only one possible number.</dd>
 				<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
 				<dt>del</dt><dd>Clear the value of a cell.</dd>
 			</dl>
