--- a/lib/kakuro.html
+++ b/lib/kakuro.html
@@ -113,14 +113,17 @@
 		<div id="keys-summary">
 			<h2>Keys</h2>
 			<dl>
+				<dt class="section">Gameplay</dt>
 				<dt>&uarr;&rarr;&darr;&larr;</dt><dd>Move cursor.</dd>
+				<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
+				<dt>del</dt><dd>Clear the value of a cell.</dd>
+				<dt class="section">Editing a Board</dt>
 				<dt>e</dt><dd>Specify an empty cell, a cell that cannot have numbers. This will prompt for right/down sums.</dd>
 				<dt>c</dt><dd>Specify a cell as one that can have a value. This will clear the number already used.</dd>
+				<dt class="section">Dev &amp; Testing</dt>
 				<dt>r</dt><dd>Reset the possible values and run the base heuristic again.</dd>
 				<dt>h</dt><dd>Run experimental heuristic. This won't be run in the normal loop.</dd>
 				<dt>n</dt><dd>Autofill cells that have only one possible number.</dd>
-				<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
-				<dt>del</dt><dd>Clear the value of a cell.</dd>
 			</dl>
 		</div>
 	</div>
