--- a/lib/kakuro.html
+++ b/lib/kakuro.html
@@ -139,6 +139,7 @@
 				<dt>1 - 9</dt><dd>Set the value of a cell (only for ones that can have a number).</dd>
 				<dt>! - (</dt><dd>Toggle possible values for a cell. (Shift + 1, ..., Shift + 9) (only toggles user input, autocomplete values are stored separately)</dd>
 				<dt>del, `</dt><dd>Clear the value of a cell.</dd>
+				<dt>c</dt><dd>Clear the user input for a cell.</dd>
 				<dt class="section">Editing a Board</dt>
 				<dt>e</dt><dd>Specify an empty cell, a cell that cannot have numbers. This will prompt for right/down sums.</dd>
 				<dt>c</dt><dd>Specify a cell as one that can have a value. This will clear the user input for the cell.</dd>
