--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -11,6 +11,11 @@
 </head>
 <body>
 <div class="container">
+
+	<!-- TODO input, redo grid -->
+	<!--  input    picture -->
+	<!-- metrics   picture -->
+
 	<svg v-bind:width="width" v-bind:height="height" v-bind:view-box.camel="viewBox">
 		<rect v-for="s in list"
 			v-bind:x="s.x" v-bind:y="s.y" v-bind:width="s.width" v-bind:height="s.height"
@@ -22,7 +27,7 @@
 		<p><strong>Width:</strong> <span v-text="width"></span> inches</p>
 		<p><strong>Height:</strong> <span v-text="height"></span> inches</p>
 		<p v-for="(value, name) in colors">
-			<strong v-text="name"></strong> <span v-text="value"></span> count
+			<span class="swatch" v-bind:class="name"></span> <span v-text="value"></span> count
 		</p>
 	</div>
 </div>
