--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -20,12 +20,15 @@
 		<rect v-for="s in list"
 			v-bind:x="s.x" v-bind:y="s.y" v-bind:width="s.width" v-bind:height="s.height"
 			v-bind:class="s.color" />
+		<rect x="-0.25" y="-0.25" v-bind:width="overallWidth+0.5" v-bind:height="overallHeight+0.5" class="quiltEdge" />
 	</svg>
 
 	<div id="metrics">
 		<!-- TODO dl/dt/dd -->
-		<p><strong>Width:</strong> <span v-text="width"></span> inches</p>
-		<p><strong>Height:</strong> <span v-text="height"></span> inches</p>
+		<p><strong>final square size</strong> <span v-text="squareSize"></span> inches</p>
+		<p><strong>final width</strong> <span v-text="width"></span> inches</p>
+		<p><strong>final height</strong> <span v-text="height"></span> inches</p>
+		<p><strong>cut square size</strong> <span v-text="cutSize"></span> inches</p>
 		<p v-for="(value, name) in colors">
 			<span class="swatch" v-bind:class="name"></span> <span v-text="value"></span> count
 		</p>
