--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -27,14 +27,15 @@
 	</svg>
 
 	<div id="metrics">
-		<!-- TODO dl/dt/dd -->
-		<p><strong>final square size</strong> <span v-text="squareSize"></span> inches</p>
-		<p><strong>final width</strong> <span v-text="quiltWidth"></span> inches</p>
-		<p><strong>final height</strong> <span v-text="quiltHeight"></span> inches</p>
-		<p><strong>cut square size</strong> <span v-text="cutSize"></span> inches</p>
-		<p v-for="(value, name) in colors">
-			<span class="swatch" v-bind:class="name"></span> <span v-text="value"></span> count
-		</p>
+		<dl>
+			<dt>final square size</dt> <dd><span v-text="squareSize"></span> inches</dd>
+			<dt>final width</dt> <dd><span v-text="quiltWidth"></span> inches</dd>
+			<dt>final height</dt> <dd><span v-text="quiltHeight"></span> inches</dd>
+			<dt>cut square size</dt> <dd><span v-text="cutSize"></span> inches</dd>
+			<template v-for="(value, name) in colors">
+				<dt><span class="swatch" v-bind:class="name"></span></dt> <dd><span v-text="value"></span> count</dd>
+			</template>
+		</dl>
 	</div>
 </div>
 <script src="square.js"></script>
