--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -20,9 +20,12 @@
 	</div>
 
 	<svg v-bind:width="svgWidth" v-bind:height="svgHeight" v-bind:view-box.camel="viewBox">
-		<rect v-for="s in list"
-			v-bind:x="s.x" v-bind:y="s.y" v-bind:width="s.width" v-bind:height="s.height"
-			v-bind:class="s.color" />
+		<!-- TODO configure rotation based on script, or have diamond draw diamonds -->
+		<g transform="rotate(-45 0 0)">
+			<rect v-for="s in list"
+				v-bind:x="s.x" v-bind:y="s.y" v-bind:width="s.width" v-bind:height="s.height"
+				v-bind:class="s.color" />
+		</g>
 		<rect x="-0.25" y="-0.25" v-bind:width="quiltWidth+0.5" v-bind:height="quiltHeight+0.5" class="quiltEdge" />
 	</svg>
 
@@ -38,6 +41,7 @@
 		</dl>
 	</div>
 </div>
-<script src="square.js"></script>
+<!-- <script src="square.js"></script> -->
+<script src="diamond.js"></script>
 </body>
 </html>
