--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -17,6 +17,12 @@
 		<p><strong>cols</strong> <input type="number" min="1" max="10" v-model="cols" /></p>
 		<p><strong>rows</strong> <input type="number" min="1" max="10" v-model="rows" /></p>
 		<p><strong>zoom</strong> <input type="range" min="1" max="30" v-model="zoom" /></p>
+
+		<table><tbody>
+			<tr v-for="(row, r) in matrix">
+				<td v-for="(cell, c) in row" class="swatch" v-bind:class="'c'+cell"></td>
+			</tr>
+		</tbody></table>
 	</div>
 
 	<svg v-bind:width="svgWidth" v-bind:height="svgHeight" v-bind:view-box.camel="viewBox">
