resize matrix on ui

--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -14,9 +14,12 @@
 
 	<div id="input">
 		<p><strong>square size</strong> <input type="number" min="0.5" max="6" step="0.25" v-model="squareSize" /></p>
-		<p><strong>cols</strong> <input type="number" min="1" max="10" v-model="cols" /></p>
-		<p><strong>rows</strong> <input type="number" min="1" max="10" v-model="rows" /></p>
-		<p><strong>zoom</strong> <input type="range" min="1" max="30" v-model="zoom" /></p>
+		<p v-if="dim===1"><strong>base pattern size</strong> <input type="number" min="1" max="10" step="1" v-model="matrixSize" v-on:change="resizeMatrix" /></p>
+		<p v-if="dim===2"><strong>base pattern width</strong> <input type="number" min="1" max="10" step="1" v-model="matrixWidth" v-on:change="resizeMatrix" /></p>
+		<p v-if="dim===2"><strong>base pattern height</strong> <input type="number" min="1" max="10" step="1" v-model="matrixHeight" v-on:change="resizeMatrix" /></p>
+		<p><strong>cols</strong> <input type="number" min="1" max="10" step="1" v-model="cols" /></p>
+		<p><strong>rows</strong> <input type="number" min="1" max="10" step="1" v-model="rows" /></p>
+		<p><strong>zoom</strong> <input type="range" min="1" max="30" step="1" v-model="zoom" /></p>
 
 		<table><tbody>
 			<tr v-for="(row, r) in matrix">
@@ -52,7 +55,7 @@
 		</dl>
 	</div>
 </div>
-<!-- <script src="square.js"></script> -->
-<script src="diamond.js"></script>
+<script src="square.js"></script>
+<!-- <script src="diamond.js"></script> -->
 </body>
 </html>
