--- a/lib/quilts/quilts.html
+++ b/lib/quilts/quilts.html
@@ -57,5 +57,7 @@
 </div>
 <script src="square.js"></script>
 <!-- <script src="diamond.js"></script> -->
+<!-- TODO triangles: e.g. quilt star -->
+<!-- TODO plaid (arbitrary row/col sizes) -->
 </body>
 </html>
